# ScholarBoard-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scholar_cache.sqlite  serve.py
data/: CLAUDE.md  researcher_areas.json  researcher_areas_small.json  researcher_database.npz  researchers.csv  researchers_dump.txt  scholar_projections.json  scholars.csv  scholars_curated.csv  scholars_small.csv
frontend/: ARCHITECTURE.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
prompts/: fetch_papers.md  fetch_researcher_info.md  parse_to_json.md  suggest_next_idea.md
researcher_info/: __init__.py  create_umap.py  download_profile_pics.py  get_embeddings.py  info_extractor.py
scholar_board/: config.py  create_embeddings.py  db.py  gemini.py  get_embeddings.py  low_dim_projection.py  plex_info_extractor.py  plex_reflection.py  profile_extractor.py  prompt_loader.py  schemas.py  scholar_info_formatter.py  scholar_info_summerizer.py  search_embeddings.py
scripts/: add_scholar_id.py  assign_subfields.py  backfill_citations.py  build_scholars_json.py  check_missing_profile_pics.py  classify_scholars.py  combine_scholars.py  compare_csv_files.py  compare_grounded_search.py  consolidate_data.py  crawl_vss.py  create_paper_embeddings.py  deploy_static.sh  download_profile_pics.py  extract_vss_authors.py  fetch_scholar_citations.py  generate_ideas.py  make_vss_csv.py  parse_raw_to_json.py  parse_scraped_vss_content.py  preprocess.py  remove_noinfo_scholars.py  remove_redundant_scholars.py  run_pipeline.py  run_umap_dbscan.py  search_vss_abstracts.py  status.py  validate_clustering.py  vss_content_scraper.py
website/: README.md  copy_scholars.py  create_placeholder.py  (+7 more)
(+67 files in other folders)
