[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "researcher-info-extractor"
version = "0.1.0"
description = "Extract comprehensive information about researchers using Perplexity API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.65.3",
    "numpy>=1.24.4",
    "plotly>=6.0.0",
    "pandas>=2.0.3",
    "numba>=0.58.1",
    "llvmlite>=0.41.1",
    "umap-learn>=0.5.7",
    "matplotlib>=3.7.5",
]

[project.scripts]
researcher-info = "researcher_info.cli:main"

[tool.setuptools]
packages = ["researcher_info"]

[tool.uv]
dev-dependencies = [] 
